# acts

./: .gitlab-ci.yml  CMakeLists.txt  CONTRIBUTING.rst
.github/workflows/: analysis.yml  builds.yml  checks.yml  sonarcloud.yml
CI/: setup_cvmfs_lcg.sh  setup_cvmfs_lcg105.sh
CI/physmon/: phys_perf_mon.sh
Core/: CMakeLists.txt
Examples/Algorithms/: CMakeLists.txt
Examples/Algorithms/FilterMeasurements/: CMakeLists.txt
Examples/Algorithms/FilterMeasurements/include/ActsExamples/FilterMeasurements/: FilterMeasurementsAlgorithm.hpp
Examples/Algorithms/FilterMeasurements/src/: FilterMeasurementsAlgorithm.cpp
Examples/Algorithms/Matching/: CMakeLists.txt
Examples/Algorithms/Matching/include/ActsExamples/Matching/: MatchingAlgorithm.hpp
Examples/Algorithms/Matching/src/: MatchingAlgorithm.cpp
Examples/Framework/: CMakeLists.txt
Examples/Python/: CMakeLists.txt
Plugins/: CMakeLists.txt
Plugins/EDM4hep/: CMakeLists.txt
Plugins/ExaTrkX/: CMakeLists.txt
Plugins/Geant4/: CMakeLists.txt
Plugins/GeoModel/: CMakeLists.txt
Plugins/Json/: CMakeLists.txt
Tests/Benchmarks/: AnnulusBoundsBenchmark.cpp  BoundaryCheckBenchmark.cpp  CMakeLists.txt  RayFrustumBenchmark.cpp  StepperBenchmarkCommons.hpp  SurfaceIntersectionBenchmark.cpp
Tests/IntegrationTests/: NavigatorConsistency.cpp  PropagationBentTracks.cpp  PropagationDenseConstant.cpp  PropagationTests.hpp
cmake/: ActsCompilerOptions.cmake  ActsConfig.cmake.in  ActsExternSources.cmake  FindFilesystem.cmake  FindPythia8.cmake
docs/: getting_started.md
docs/core/: magnetic_field.md  propagation.md
(+428 files in other folders)
